--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,9 @@
  * Version: 1.0
  * */
 
+
+
+
 /* FONT
 ================================================== */
 
@@ -45,6 +48,19 @@
 .icon-linkedin:before { content: '\f0e1'; } /* '' */
 .icon-up:before { content: '\f176'; } /* '' */
 
+/* THEME
+================================================== */
+:root {    
+    --primary: #337ab7; 
+    --secondary: #337ab7; 
+    --blackBorder: #212121;
+    --whiteBorder:#e1e1e1;
+    --shadow:  rgba(0, 0, 0, 0.15);
+    --white_1: #e1e1e1;
+    --white_2: #fff;
+    --black_1: #212121;
+  }
+
 /* CUSTOM RESETS
 ================================================== */
 a {
@@ -81,32 +97,28 @@ h4 {
     -ms-transition: box-shadow 0.25s ease-in-out;
 }
 
-.btn-fill {
-    color: #fff;
-    background-color: #212121;
-}
 
 .btn-border {
     background-color: transparent;
-    color: #212121;
-    border: 1px solid #212121; 
+    color: var(--blackBorder);
+    border: 1px solid var(--blackBorder); 
 }
 
 .btn-fill:hover,
 .btn-fill:focus {
-    color: #fff;
+    color: var(--white_2);
 }
 
 .btn:hover,
 .btn:focus {
-    box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 10px 18px 0px var(--shadow);
 }
 
 /* Input fields */
 .form-control {
     padding-left: 10px;
     border: 0;
-    border-bottom: 1px solid #212121;
+    border-bottom: 1px solid var(--blackBorder);
     border-radius: 0;
     background-color: transparent; 
     box-shadow: none;
@@ -122,7 +134,7 @@ textarea {
 
 .form-control:focus {
     box-shadow: none;
-    border-bottom-color: #e1e1e1;
+    border-bottom-color: var(--whiteBorder);
 }
 
 ::-moz-placeholder,
@@ -139,7 +151,7 @@ html, body {
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
-    color: #212121;
+    color: var(--black_2);
 }
 
 .img-res {
@@ -157,7 +169,7 @@ html, body {
 
 /* Background-color */
 .gray-bg {
-    background-color: #e1e1e1;
+    background-color: var(--white_2);
 }
 
 /* HEADER
@@ -178,7 +190,7 @@ html, body {
 .navbar-nav > li > a {
     padding: 5px 0;
     font-weight: 600;
-    color: #212121;
+    color: var(--black_1);
     text-transform: uppercase;
     border-bottom: 2px solid transparent;
     transition: border-color 0.25s ease-in-out;
@@ -201,11 +213,24 @@ html, body {
 .nav > li > a:hover,
 .nav > li.active > a {
     background-color: transparent;
-    border-bottom: 2px solid #212121;
+    border-bottom: 2px solid var(--blackBorder);
 }
 
 .nav > li > a:focus {
     background-color: transparent;
+}
+
+/* BODY
+================================================== */
+h3{
+    color :var(--primary); 
+}
+
+hr {
+   height:2px;
+   border-width:0;
+   color: var(--secondary);
+   background-color:var(--secondary);
 }
 
 /* HERO
@@ -245,6 +270,7 @@ html, body {
     font-weight: 700;
     margin: 0 0 15px;
     text-transform: uppercase;
+    color : var(--primary);
 }
 
 .job-title {
@@ -262,7 +288,7 @@ html, body {
 .site-main {
     position: relative;
     margin-bottom: 100px;
-    background-color: #fff;
+    background-color: var(--white_2);
     z-index: 1;
 }
 /* site-section */
@@ -309,7 +335,7 @@ html, body {
 }
 
 .progress-bar {
-    background-color: #3012db;  
+    background-color: var(--secondary);  
 }
 
 /* Section: foto-slide */
@@ -420,15 +446,15 @@ html, body {
 .portfolio-item-info h4 {
     margin: 0 0 20px;
     font-weight: 700;
-    color: #fff;
+    color: var(--white_2);
 }
 
 .portfolio-item-info a {
     padding: 6px 7px 4px;
     font-size: 12px;
-    border: 1px solid #fff;
+    border: 1px solid var(--white_2);
     border-radius: 50px;
-    color: #fff;
+    color: var(--white_2);
     transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
     -moz-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
     -webkit-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
@@ -437,8 +463,8 @@ html, body {
 }
 
 .portfolio-item-info a:hover {
-    color: #212121;
-    background-color: #fff;
+    color: var(--black_1);
+    background-color: var(--white_2);
 }
 
 .section-portfolio .btn {
@@ -466,11 +492,11 @@ html, body {
     right: 0;
     padding: 10px 11px;
     margin-top: 0;
-    background-color: #fff;
+    background-color: var(--white_2);
     font-size: 16px;
-    color: #212121;
-    border-left: 1px solid #212121;
-    border-bottom: 1px solid #212121;
+    color: var(--black_1);
+    border-left: 1px solid var(--black_1);
+    border-bottom: 1px solid var(--black_1);
     opacity: 1;
     transition: box-shadow 0.25s ease-in-out;
     -moz-transition: box-shadow 0.25s ease-in-out;
@@ -510,14 +536,14 @@ html, body {
 }
 
 .section-counters h4 {
-    color: #fff;
+    color: var(--white_2);
     margin: 25px 0 0;
 }
 
 .site-section p.counter {
     font-size: 100px;
     font-weight: 300;
-    color: #fff;
+    color: var(--white_2);
     margin: 0;
     line-height: 0.8;
 }
@@ -538,15 +564,15 @@ html, body {
     bottom: 0;
     padding: 30px 0;
     width: 100%;
-    background-color: #212121;
+    background-color: var(--black_1);
     z-index: -1;
 }
 
 .icon {
     line-height: 40px;
     padding: 9px 11px;
-    color: #fff;
-    border: 1px solid #fff;
+    color: var(--white_2);
+    border: 1px solid var(--white_2);
     border-radius: 50%;
 }
 
@@ -559,7 +585,7 @@ html, body {
 }
 
 .icon:hover {
-    background-color: #fff;
+    background-color: var(--white_2);
 }
 
 .site-footer a {
@@ -574,12 +600,12 @@ a.twitter-bg:hover {color: #55acee;}
 a.facebook-bg:hover{color: #3b5998;}
 a.gplus-bg:hover{color: #007bb5;} 
 a.linkedin-bg:hover {color: #dd4b39;}
-a.icon-up-bg:hover {color: #212121;}
+a.icon-up-bg:hover {color: var(--black_1);}
 
 .copyright {
     margin-bottom: 0;
     line-height: 40px;
-    color: #fff;
+    color: var(--white_2);
     text-align: center;
 }
 
@@ -588,6 +614,34 @@ a.icon-up-bg:hover {color: #212121;}
     list-style: none;
     padding: 0%;
 }
+
+/*Eliminar table border top*/
+.table>tbody>tr>td, 
+.table>tbody>tr>th, 
+.table>tfoot>tr>td, 
+.table>tfoot>tr>th, 
+.table>thead>tr>td, 
+.table>thead>tr>th {
+    padding: 8px;
+    line-height: 1.42857143;
+    vertical-align: top;
+    border-top: 0px solid #ddd;
+}
+
+
+
+#training td:last-child {
+    color: blue;
+    margin-bottom:1%;
+}
+
+
+
+#experience td:last-child p:first-child {
+    color: blue;
+    margin-bottom:1%;
+}
+
 
 /*ANIMACIÓN TEXTO CABECERA*/
 
