--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -711,7 +711,7 @@ padding-left: 5%;
     background-color: var(--black_1);
 }
 
-#myCarousel{padding-bottom: 20%;}
+#myCarouselId{padding-bottom: 20%;}
 
 /*ANIMACIÓN TEXTO CABECERA*/
 
