--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2,11 +2,12 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1199px) {
+
 	/* HEADER
 	================================================== */
 	/* Navigation */
-	.navbar-nav > li + li > a {
-	    margin-left: 30px;
+	.navbar-nav>li+li>a {
+		margin-left: 30px;
 	}
 
 	/* HERO
@@ -29,29 +30,30 @@
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 991px) {
+
 	/* CUSTOM RESETS
 	================================================== */
 	h4 {
 		font-size: 24px;
 	}
 
-	/* Buttons */ 
+	/* Buttons */
 	.btn {
-	    min-width: 120px;
-	    line-height: 40px;
-	    padding: 0 25px;
-	    font-size: 14px;
-	} 
+		min-width: 120px;
+		line-height: 40px;
+		padding: 0 25px;
+		font-size: 14px;
+	}
 
 	/* HEADER
 	================================================== */
 	/* Navigation */
-	.navbar-nav > li > a {
+	.navbar-nav>li>a {
 		font-size: 14px;
 	}
 
-	.navbar-nav > li + li > a {
-	    margin-left: 20px;
+	.navbar-nav>li+li>a {
+		margin-left: 20px;
 	}
 
 	/* HERO
@@ -77,7 +79,7 @@
 	.section-skills,
 	.section-portfolio,
 	.section-form {
-	    padding-bottom: 90px;
+		padding-bottom: 90px;
 	}
 
 	.site-section h2,
@@ -93,7 +95,7 @@
 
 	.skill h4 {
 		font-size: 22px;
-	} 
+	}
 
 
 
@@ -114,28 +116,29 @@
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 767px) {
+
 	/* CUSTOM RESETS
 	================================================== */
 	h4 {
 		font-size: 20px;
 	}
 
-	/* Buttons */ 
+	/* Buttons */
 	.btn {
-	    min-width: 100px;
-	    line-height: 30px;
+		min-width: 100px;
+		line-height: 30px;
 		padding: 0 20px;
 		margin: 10px;
-	} 
+	}
 
 	/* Input fields */
 	.form-control {
-	 	margin-top: 25px;
+		margin-top: 25px;
 	}
 
 	/* Margin and Paddings Resets */
 	.mt-x-0 {
-	    margin-top: 0;
+		margin-top: 0;
 	}
 
 	/* HEADER
@@ -150,32 +153,32 @@
 
 	/* Navigation */
 	.navbar-toggle {
-	    margin: 0 15px 0 0;
-	    padding: 5px 0;
-	   	border: 0;
+		margin: 0 15px 0 0;
+		padding: 5px 0;
+		border: 0;
 	}
 
 	.navbar-toggle .icon-bar {
 		height: 1px;
 		width: 30px;
-	    background-color: #212121;
-	    -webkit-transition: all 0.3s;
-	    -moz-transition: all 0.3s;
-	    -ms-transition: all 0.3s;
-	    -o-transition: all 0.3s;
-	    transition: all 0.3s;
+		background-color: #212121;
+		-webkit-transition: all 0.3s;
+		-moz-transition: all 0.3s;
+		-ms-transition: all 0.3s;
+		-o-transition: all 0.3s;
+		transition: all 0.3s;
 	}
 
-	.navbar-toggle .icon-bar + .icon-bar {
-		margin-top: 6px; 
+	.navbar-toggle .icon-bar+.icon-bar {
+		margin-top: 6px;
 	}
 
-	.navbar-toggle.act .icon-bar:first-child, 
-	.navbar-toggle.act .icon-bar:last-child  { 
-	    position: absolute;
-	    top: 10px;
-	    height: 2px;
-	    background-color: #fff;
+	.navbar-toggle.act .icon-bar:first-child,
+	.navbar-toggle.act .icon-bar:last-child {
+		position: absolute;
+		top: 10px;
+		height: 2px;
+		background-color: #fff;
 	}
 
 	.navbar-toggle.act .icon-bar:first-child {
@@ -186,7 +189,7 @@
 		transform: rotate(45deg);
 	}
 
-	.navbar-toggle.act .icon-bar:last-child  {
+	.navbar-toggle.act .icon-bar:last-child {
 		-webkit-transform: rotate(-45deg);
 		-moz-transform: rotate(-45deg);
 		-ms-transform: rotate(-45deg);
@@ -198,22 +201,22 @@
 		opacity: 0;
 	}
 
-	.navbar-toggle.act .icon-bar + .icon-bar  {
-	    margin-top: 0px;
+	.navbar-toggle.act .icon-bar+.icon-bar {
+		margin-top: 0px;
 	}
 
-	.navbar-nav > li > a,
-	.navbar-nav > li + li > a {
+	.navbar-nav>li>a,
+	.navbar-nav>li+li>a {
 		display: inline-block;
 		margin: 0;
 		color: #fff;
 	}
 
-	.navbar-nav > li > a:hover,
-	.navbar-nav > li.active > a,
-	.nav > li > a:hover,
-	.nav > li.active > a {
-	    border-bottom: 2px solid #fff;
+	.navbar-nav>li>a:hover,
+	.navbar-nav>li.active>a,
+	.nav>li>a:hover,
+	.nav>li.active>a {
+		border-bottom: 2px solid #fff;
 	}
 
 	.navbar-toggle.act {
@@ -222,7 +225,7 @@
 	}
 
 	.main-menu {
-		background-color: rgba(33,33,33,0.9);
+		background-color: rgba(33, 33, 33, 0.9);
 		position: fixed;
 		left: 0;
 		top: 0;
@@ -280,7 +283,6 @@
 
 	.hero h1 {
 		font-size: 32px
-		
 	}
 
 	.job-title {
@@ -300,32 +302,32 @@
 
 	/* site-section */
 	.site-section {
-	   padding-top: 60px;
+		padding-top: 60px;
 	}
 
 	.section-skills,
 	.section-portfolio,
 	.section-form {
-	    padding-bottom: 60px;
+		padding-bottom: 60px;
 	}
 
 	.site-section h2,
 	.site-section h3 {
-	    font-size: 28px;
+		font-size: 28px;
 	}
 
 	.img-lines {
-	    margin: 10px 0 30px;
+		margin: 10px 0 30px;
 	}
 
 	.site-section p {
-	    margin-bottom: 2%;
+		margin-bottom: 2%;
 	}
 
 	/* Section: Skills */
 	.skill h4 {
-	    text-transform: uppercase;
-	    margin-bottom: 10px;
+		text-transform: uppercase;
+		margin-bottom: 10px;
 	}
 
 	/* Section: Services */
@@ -351,7 +353,7 @@
 
 	.portfolio-item,
 	.section-portfolio .col-md-4:nth-last-child(-n+3) .portfolio-item {
-		margin-bottom: 15px; 
+		margin-bottom: 15px;
 	}
 
 	.section-portfolio .col-md-4:nth-last-child(-n+2) .portfolio-item {
@@ -364,7 +366,7 @@
 	}
 
 	/* Section: Counters */
-	.section-counters .col-xs-12 + .col-xs-12 {
+	.section-counters .col-xs-12+.col-xs-12 {
 		margin-top: 25px;
 	}
 
@@ -378,6 +380,24 @@
 		height: 250px;
 	}
 
+
+	/**
+ * ----------------------------------------
+ * Section - AboutMe
+ * ----------------------------------------
+ */
+	.aboutMe__text {
+		text-align: justify;
+		font-size: 16px;
+		line-height: 20px;
+		font-weight: 500;
+		text-indent: initial;
+		letter-spacing: normal;
+		word-spacing: normal;
+	}
+
+	/**
+
 	/* FOOTER
 	================================================== */
 	.site-footer .col-xs-12 {
@@ -385,7 +405,7 @@
 	}
 }
 
-/* Extra Small Devices, Phones */ 
+/* Extra Small Devices, Phones */
 @media only screen and (max-width : 479px) {
 	.visible-xxs {
 		display: block;
@@ -393,7 +413,7 @@
 
 	/* HERO
 	================================================== */
-	.hero .visible-xxs + .btn {
+	.hero .visible-xxs+.btn {
 		margin-top: 10px;
 	}
 
@@ -419,21 +439,56 @@
 
 	.portfolio-item,
 	.section-portfolio .col-md-4:nth-last-child(-n+3) .portfolio-item {
-		margin-bottom: 15px; 
+		margin-bottom: 15px;
 	}
 
 	.section-portfolio .btn {
 		margin-top: 25px;
 	}
 
+	/**
+ * ----------------------------------------
+ * Section - AboutMe
+ * ----------------------------------------
+ */
+	.aboutMe__text {
+		text-align: justify;
+		font-size: 16px;
+		line-height: 20px;
+		font-weight: 500;
+		text-indent: initial;
+		letter-spacing: normal;
+		word-spacing: normal;
+	}
+
+	/**
+ * ----------------------------------------
+ * Section - Education - Experience
+ * ----------------------------------------
+ */
+	.row_content {
+		padding-left: 5%;
+		padding-right: 5%;
+		padding-bottom: 5%;
+		display: flex;
+		flex-wrap: wrap;
+		flex-direction: column;
+	}
+
+	.row__start {
+		flex: 1;
+		display: flex;
+		flex-direction: row;
+	}
+
 	/* FOOTER
 	================================================== */
 	.site-footer .row {
-		display:flex;
-		flex-direction: column-reverse;	
+		display: flex;
+		flex-direction: column-reverse;
 	}
 
-	.site-footer .text-right{
+	.site-footer .text-right {
 		text-align: center;
 	}
 
