--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,19 +41,29 @@
 
 .icon-twitter:before {
   content: "\f099";
-} /* '' */
+}
+
+/* '' */
 .icon-facebook:before {
   content: "\f09a";
-} /* '' */
+}
+
+/* '' */
 .icon-gplus:before {
   content: "\f0d5";
-} /* '' */
+}
+
+/* '' */
 .icon-linkedin:before {
   content: "\f0e1";
-} /* '' */
+}
+
+/* '' */
 .icon-up:before {
   content: "\f176";
-} /* '' */
+}
+
+/* '' */
 
 /* THEME
 ================================================== */
@@ -148,30 +158,51 @@ textarea {
   font-size: 16px;
 }
 
+.mt-2P {
+  margin-top: 2%;
+}
+.mt-6P {
+  margin-top: 6%;
+}
+.mt-6 {
+  margin-top: 6px;
+}
+.mt-10 {
+  margin-top: 10px;
+}
 .mr-6 {
   margin-right: 6px;
 }
+
 .mr-10 {
   margin-right: 10px;
 }
+
 .primary-color {
   color: var(--primary);
 }
+
 .secondary-color {
   color: var(--secondary);
 }
+
 .primary-bg {
   background-color: var(--primary);
 }
+
 .secondary-bg {
   background-color: var(--secondary);
 }
+
 .fw-5 {
   font-weight: 500;
 }
+
 .fw-3 {
   font-weight: 300;
 }
+.center { justify-content: center; align-items: center;}
+.allWidth{ width: 100%;}
 /* LAYOUT
 ================================================== */
 html,
@@ -218,7 +249,7 @@ body {
 }
 
 /* Navigation */
-.navbar-nav > li > a {
+.navbar-nav>li>a {
   padding: 5px 0;
   font-weight: 600;
   color: var(--black_1);
@@ -235,20 +266,20 @@ body {
   margin-right: 0;
 }
 
-.navbar-nav > li + li > a {
+.navbar-nav>li+li>a {
   margin-left: 40px;
 }
 
-.navbar-nav > li > a:hover,
-.navbar-nav > li.active > a,
-.nav > li > a:hover,
-.nav > li.active > a {
+.navbar-nav>li>a:hover,
+.navbar-nav>li.active>a,
+.nav>li>a:hover,
+.nav>li.active>a {
   background-color: transparent;
   border-bottom: 2px solid var(--primary);
   color: var(--primary);
 }
 
-.nav > li > a:focus {
+.nav>li>a:focus {
   background-color: transparent;
 }
 
@@ -265,6 +296,7 @@ hr {
   color: var(--primary);
   background-color: var(--primary);
 }
+
 .center {
   text-align: center;
 }
@@ -327,6 +359,7 @@ hr {
   background-color: var(--white_2);
   z-index: 1;
 }
+
 /* site-section */
 .site-section {
   padding-top: 120px;
@@ -362,6 +395,7 @@ hr {
 .row_content h4 {
   color: var(--secondary);
 }
+
 .progress {
   height: 15px;
   margin-bottom: 0;
@@ -409,6 +443,7 @@ hr {
   0% {
     margin-left: 0;
   }
+
   20% {
     margin-left: 0;
   }
@@ -416,6 +451,7 @@ hr {
   25% {
     margin-left: -100%;
   }
+
   45% {
     margin-left: -100%;
   }
@@ -423,6 +459,7 @@ hr {
   50% {
     margin-left: -200%;
   }
+
   70% {
     margin-left: -200%;
   }
@@ -430,6 +467,7 @@ hr {
   75% {
     margin-left: -300%;
   }
+
   100% {
     margin-left: -300%;
   }
@@ -621,7 +659,7 @@ hr {
   border-radius: 50%;
 }
 
-.icon + .icon {
+.icon+.icon {
   margin-left: 5px;
 }
 
@@ -644,6 +682,7 @@ hr {
   right: auto;
   left: auto;
 }
+
 .icon-ij-container {
   position: relative;
 }
@@ -660,15 +699,19 @@ hr {
 a.twitter-bg:hover {
   color: #55acee;
 }
+
 a.facebook-bg:hover {
   color: #3b5998;
 }
+
 a.gplus-bg:hover {
   color: #007bb5;
 }
+
 a.linkedin-bg:hover {
   color: #dd4b39;
 }
+
 a.icon-up-bg:hover {
   color: var(--black_1);
 }
@@ -691,18 +734,18 @@ a.icon-up-bg:hover {
 } */
 
 /*Eliminar table border top*/
-.table > tbody > tr > td,
-.table > tfoot > tr > td,
-.table > thead > tr > td {
+.table>tbody>tr>td,
+.table>tfoot>tr>td,
+.table>thead>tr>td {
   padding: 8px;
   line-height: 1.42857143;
   vertical-align: top;
   border-top: 0px solid #ddd;
 }
 
-.table > tbody > tr > th,
-.table > tfoot > tr > th,
-.table > thead > tr > th {
+.table>tbody>tr>th,
+.table>tfoot>tr>th,
+.table>thead>tr>th {
   padding: 0px;
   line-height: 1.42857143;
   vertical-align: top;
@@ -720,11 +763,7 @@ a.icon-up-bg:hover {
   margin-bottom: 1%;
 }
 
-.experience_content p:first-child {
-  color: var(--secondary);
-  margin-bottom: 1%;
-  font-weight: 500;
-}
+
 
 #experience div {
   text-align: left;
@@ -734,6 +773,8 @@ a.icon-up-bg:hover {
   padding-left: 5%;
   padding-right: 5%;
   padding-bottom: 5%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .site-section p {
@@ -742,6 +783,12 @@ a.icon-up-bg:hover {
 
 .experience_content {
   padding-left: 3%;
+}
+
+.experience_content p:first-child {
+  color: var(--secondary);
+  margin-bottom: 1%;
+  font-weight: 500;
 }
 
 .experience_content p:last-child {
@@ -780,18 +827,21 @@ a.icon-up-bg:hover {
     filter: blur(12px);
     opacity: 0;
   }
+
   100% {
     -webkit-filter: blur(0px);
     filter: blur(0px);
     opacity: 1;
   }
 }
+
 @keyframes text-focus-in {
   0% {
     -webkit-filter: blur(12px);
     filter: blur(12px);
     opacity: 0;
   }
+
   100% {
     -webkit-filter: blur(0px);
     filter: blur(0px);
@@ -800,8 +850,7 @@ a.icon-up-bg:hover {
 }
 
 .text-focus-in {
-  -webkit-animation: text-focus-in 0.75s cubic-bezier(0.55, 0.085, 0.68, 0.53)
-    both;
+  -webkit-animation: text-focus-in 0.75s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
   animation: text-focus-in 0.75s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
 
@@ -822,31 +871,100 @@ a.icon-up-bg:hover {
     letter-spacing: -0.5em;
     opacity: 0;
   }
+
   40% {
     opacity: 0.6;
   }
+
   100% {
     opacity: 1;
   }
 }
+
 @keyframes tracking-in-expand {
   0% {
     letter-spacing: -0.5em;
     opacity: 0;
   }
+
   40% {
     opacity: 0.6;
   }
+
   100% {
     opacity: 1;
   }
 }
 
 .tracking-in-expand {
-  -webkit-animation: tracking-in-expand 3s cubic-bezier(0.215, 0.61, 0.355, 1)
-    both;
+  -webkit-animation: tracking-in-expand 3s cubic-bezier(0.215, 0.61, 0.355, 1) both;
   animation: tracking-in-expand 3s cubic-bezier(0.215, 0.61, 0.355, 1) both;
 }
+
+.aboutMe__text {
+  text-align: justify;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 500;
+    text-indent: initial;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+}
+
+
+/**
+ * ----------------------------------------
+ * Section - Education - Experience
+ * ----------------------------------------
+ */
+.section__header {
+  padding-bottom: 5%;
+ }
+
+
+.row__start {
+  flex: 1;
+  display: flex;
+  flex-flow: column;
+  flex-direction: column;
+}
+
+.row__start p {
+  line-height: 20px;
+  font-size: 16px;
+  padding-left: 2%;
+}
+
+.row__end {
+  flex: 6;
+  flex-wrap: wrap;
+  padding-left: 5%;
+  justify-content: flex-start;
+  text-align: start;
+  /* min-width: 500px; */
+
+}
+
+.row__end p:first-child {
+  color: var(--secondary);
+  margin-bottom: 1%;
+  font-weight: 500;
+  padding-right: 6%;
+}
+
+.experience .row__end p:last-child {
+  padding-left: 5%;
+}
+
+/**
+ * ----------------------------------------
+ * Section - skills
+ * ----------------------------------------
+ */
+ #skills .section__header {
+  padding-bottom: 0;
+ }
+
 .skills-header {
   display: flex;
   width: 100%;
@@ -854,18 +972,18 @@ a.icon-up-bg:hover {
   justify-items: center;
   align-items: center;
   flex-direction: row;
-  padding-top: 6%;
-  padding-bottom: 2%;
+  padding-top: 5%;
+  padding-bottom: 3%;
 }
+
 .skills-img {
   display: flex;
   width: 30px;
   height: 30px;
 }
+
 .skill {
-  /* display: flex; */
-  /* flex-direction: row; */
-  /* max-width: 400px; */
+  padding-top: 10px;
   min-width: 300px;
   margin-left: 6px;
   margin-right: 6px;
@@ -874,11 +992,38 @@ a.icon-up-bg:hover {
 .skills-row {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   justify-items: center;
   width: 100%;
   min-height: 60px;
   flex-wrap: wrap;
 }
+/**
+ * ----------------------------------------
+ * Section - onlineCourses
+ * ----------------------------------------
+ */
+ .carousel-indicators li {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 1px;
+  text-indent: -999px;
+  cursor: pointer;
+  background-color: #000;
+  background-color: rgba(0,0,0,0);
+  border: 1px solid var(--secondary);
+  border-radius: 10px;
+}
+.carousel-indicators {
+  bottom: -40px;
+}
+.carousel-indicators .active {
+  margin-top: 10px;
+  background-color: var(--secondary);
+}
+/* .carousel-control-container {
+padding-top: 6%;
+} */
 
 /***********************************************************************************************/
